<?xml version="1.0"?>
<package>
  <name>falkotest</name>
  <version>0.0.0</version>
  <description>The falkotest package</description>
  <maintainer email="andfro@todo.todo">andfro</maintainer>

  <license>TODO</license>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>


  <run_depend>roscpp</run_depend>


  <export>
  </export>
</package>
